# shuttttttt

./: .env.example  Cargo.toml  docker-compose.yml
database/: Cargo.toml
database/src/: lib.rs
src/: error.rs  main.rs
src/commands/: mod.rs  search.rs
src/db/: collections.rs  error.rs  mod.rs  songs_repo.rs
src/ingestion/: mod.rs  songs_collector.rs
tunecore/: Cargo.toml
tunecore/src/: error.rs  lib.rs  models.rs
tunecore/src/endpoints/: mod.rs
tunecore/src/endpoints/creators/: builder.rs  mod.rs  types.rs
tunecore/src/models/: artist.rs  mod.rs  response.rs  song.rs
