[package]
name = "extractor"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
futures = "0.3.31"
futures-util = "0.3.31"
mongodb = "3.2.4"
poise = "0.6.1"
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tunecore = { version = "0.1.0", path = "tunecore" }
